# TetrisAI

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: Board.hpp
lib/: CMakeLists.txt
src/: App.cpp  App.h  Board.cpp  CMakeLists.txt  Tetrominoes.cpp  ai.cpp  main.cpp  main_genetic.cpp  main_human.cpp
src/ai/: Agent.cpp  Agent.h  Player.h  Player.hpp  eval.cpp  eval.h
src/ai/genetic/: Agent.cpp  Agent.h  Agent.hpp  eval.cpp  eval.h  eval.hpp  train.cpp  train.hpp
src/app/: App.cpp  App.h  App.hpp  HumanPlayer.cpp  HumanPlayer.h  HumanPlayer.hpp  main_genetic.cpp
src/app/gfx/: Window.cpp  Window.h  Window.hpp
src/game/: Board.cpp  Board.h  Board.hpp  tetrominoes.hpp
src/gfx/: App.cpp  App.h  Window.cpp  Window.h
src/headers/: App.hpp  Board.hpp  Tetrominoes.hpp  ai.hpp
tests/: CMakeLists.txt  tests.cpp
